# BloomFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: BloomFilter.h
src/: BloomFilter.cpp
test/: main.cpp
